--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ a {
 }
 
 p {
-  font-size: 16px;
+  font-size: 20px;
 }
 
 /* Hero Main Page Picture */
@@ -121,6 +121,7 @@ p {
 
 .benefits h3 {
   margin-bottom: 32px;
+  font-size: 36px;
   text-align: center;
   color: #ffffff;
 }
@@ -137,7 +138,7 @@ p {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   text-align: center;
-  color: #fff;
+  color: #222;
 }
 
 .footer h2 {
